# similarity_tickets

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: YT_Langchain_Simple_Summarization.ipynb  feed_tickets_embeddings_chunks.ipynb  feed_tickets_embeddings_summary.ipynb  tickets_similares_poc copy.ipynb  tickets_similares_poc.ipynb
src/: custom_stopwords.txt  database_service.py  document_search_service.py  embedding.py  embeddings.py  find_similarity copy.py  load_data_service.py  logger.py  sentence.txt  similarity_finder.py  util.py
src/utils/: update_embeddings.py  update_vector_database.py
tests/: create_embeddings.py  process_embedding.py  run_tests.py  tickets_similares.ipynb
